--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@ngrx/effects": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
     "@ngrx/store-devtools": "^17.1.1",
     "primeflex": "^3.3.1",
     "rxjs": "~7.8.0",
